 - Add a replacement for the VCF-tools VCF-subset program. The Goby tool is orders of magnitude faster.
 - vcf-subset: Add ability to exclude positions at which all samples match the reference.
 - Preliminary support for calling indels with discover-sequence-variants.  Candidate indels are now written
   in the formats that use GenotypeOutputFormat (e.g., genotypes, compare_groups, allele_frequency).
   The method of Krawitz et al is used to determine the equivalent indel region for each possible candidate.
   After possible realignment, and filtering to remove possible errors, EIR are reported with their frequencies.
1.9.8.1
 - Discover-sequence-variants: add ability to describe zero, one or more group comparisons. Syntax is A/B,A/C to compare
   group A to B and group A to C. Additional pairs can be described, separated by coma.
 - Extend methyl-stats mode to estimate fraction of methylated cytosine observed in CpX contexts.
 - Discover-sequence-variants, genotype format: Fix a bug where alleleSet was cleared in each sample, rather than before
   any sample is processed. This made it possible for some positions to be ignored erroneously when samples were given
   on a specific order on the command line. Specifically, positions would be ignored if they were not typed (i.e., not
   enough good bases) in the last sample given on the command line.
 - Optimize merging of TMH when the files are large (>100M compressed).
 - Fixed a major bug where NonAmbiguousAlignmentReader would stop iterating after encountering an ambiguous alignment.
   Alignments with shorter reads were much more likely to be affected.
 - Fix sam-extract-reads for paired-end BAM files. Each BAM file contains both pairs. To convert to compact reads, the
   input BAM file must be sorted by read name, since this is the only way we can put the pairs back together in one
   Goby record.