@@ -1,3 +1,5 @@
+ - Fix scalability problem with local realignment code. Local realignment around indels would slow down as more entries
+   were processed. This is now fixed so that speed is constant across large alignments.
  - Add a replacement for the VCF-tools VCF-subset program. The Goby tool is orders of magnitude faster.
  - vcf-subset: Add ability to exclude positions at which all samples match the reference.
  - Preliminary support for calling indels with discover-sequence-variants.  Candidate indels are now written
